; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_super.c_do_thaw_all_callback.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_super.c_do_thaw_all_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.super_block = type { i32, i32, i64 }

@SB_BORN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.super_block*)* @do_thaw_all_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_thaw_all_callback(%struct.super_block* %0) #0 {
  %2 = alloca %struct.super_block*, align 8
  store %struct.super_block* %0, %struct.super_block** %2, align 8
  %3 = load %struct.super_block*, %struct.super_block** %2, align 8
  %4 = getelementptr inbounds %struct.super_block, %struct.super_block* %3, i32 0, i32 1
  %5 = call i32 @down_write(i32* %4)
  %6 = load %struct.super_block*, %struct.super_block** %2, align 8
  %7 = getelementptr inbounds %struct.super_block, %struct.super_block* %6, i32 0, i32 2
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %22

10:                                               ; preds = %1
  %11 = load %struct.super_block*, %struct.super_block** %2, align 8
  %12 = getelementptr inbounds %struct.super_block, %struct.super_block* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = load i32, i32* @SB_BORN, align 4
  %15 = and i32 %13, %14
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %10
  %18 = load %struct.super_block*, %struct.super_block** %2, align 8
  %19 = call i32 @emergency_thaw_bdev(%struct.super_block* %18)
  %20 = load %struct.super_block*, %struct.super_block** %2, align 8
  %21 = call i32 @thaw_super_locked(%struct.super_block* %20)
  br label %26

22:                                               ; preds = %10, %1
  %23 = load %struct.super_block*, %struct.super_block** %2, align 8
  %24 = getelementptr inbounds %struct.super_block, %struct.super_block* %23, i32 0, i32 1
  %25 = call i32 @up_write(i32* %24)
  br label %26

26:                                               ; preds = %22, %17
  ret void
}

declare dso_local i32 @down_write(i32*) #1

declare dso_local i32 @emergency_thaw_bdev(%struct.super_block*) #1

declare dso_local i32 @thaw_super_locked(%struct.super_block*) #1

declare dso_local i32 @up_write(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
